--- a/Maui.DataAccess/MauiBook.DataAccess.csproj
+++ b/Maui.DataAccess/MauiBook.DataAccess.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,9 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Maui.DataAccess\Maui.DataAccess.csproj" />
-    <ProjectReference Include="..\Maui.Models\Maui.Models.csproj" />
-    <ProjectReference Include="..\Maui.Utility\Maui.Utility.csproj" />
+    <ProjectReference Include="..\Maui.Models\MauiBook.Models.csproj" />
+    <ProjectReference Include="..\Maui.Utility\MauiBook.Utility.csproj" />
   </ItemGroup>
 
 </Project>
