--- a/MauiWeb/MauiBookWeb.csproj
+++ b/MauiWeb/MauiBookWeb.csproj
@@ -13,12 +13,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Maui.DataAccess\MauiBook.DataAccess.csproj" />
     <ProjectReference Include="..\Maui.Models\MauiBook.Models.csproj" />
     <ProjectReference Include="..\Maui.Utility\MauiBook.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
