push one to one

--- a/MauiWeb/appsettings.json
+++ b/MauiWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectToDB": "Server=DESKTOP-RKEQNQV;Database=DBMauiBook;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ConnectToDB": "Server=DESKTOP-H3NCHNL;Database=DBMauiBook;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
