--- a/MauiWeb/appsettings.json
+++ b/MauiWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectToDB": "Server=DESKTOP-RKEQNQV;Database=DBMaui;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ConnectToDB": "Server=tcp:mauibook-server.database.windows.net,1433;Initial Catalog=DBMauiBook;Persist Security Info=False;User ID=sqladmin;Password=admin123*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
