--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Maui.sln
+/MauiWeb/appsettings.Production.json
+/MauiWeb/appsettings.Development.json
+/MauiWeb/appsettings.json
